; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_repo_config_get_pathname.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_repo_config_get_pathname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.repository = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @repo_config_get_pathname(%struct.repository* %0, i8* %1, i8** %2) #0 {
  %4 = alloca %struct.repository*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  store %struct.repository* %0, %struct.repository** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8** %2, i8*** %6, align 8
  %8 = load %struct.repository*, %struct.repository** %4, align 8
  %9 = call i32 @git_config_check_init(%struct.repository* %8)
  %10 = load %struct.repository*, %struct.repository** %4, align 8
  %11 = getelementptr inbounds %struct.repository, %struct.repository* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i8**, i8*** %6, align 8
  %15 = call i32 @git_configset_get_pathname(i32 %12, i8* %13, i8** %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @git_die_config(i8* %19, i32* null)
  br label %21

21:                                               ; preds = %18, %3
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i32 @git_config_check_init(%struct.repository*) #1

declare dso_local i32 @git_configset_get_pathname(i32, i8*, i8**) #1

declare dso_local i32 @git_die_config(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
